# project_testing_2

./: .coverage  pyproject.toml
tests/: test_get.py  test_index_of.py  test_slice.py
