[tool.poetry]
name = "project-testing-2"
version = "0.1.0"
description = ""
authors = ["anna-golovacheva <anna.ch.ollala@gmail.com>"]
readme = "README.md"
packages = [{include = "project_testing_2"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
